# RemoteSensingCO2Estimation

./: .gitignore  data_viz.ipynb  dataset_multitask.py  eval_multitask.py  pyproject.toml  split_data.ipynb  train_multitask.py
models/: model_multitask.py
