[tool.poetry]
name = "remotesensingco2estimation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
pandas = "^1.3.5"
torch = "^1.10.1"
scikit-learn = "^1.0.2"
rasterio = "^1.2.10"
torchvision = "^0.11.2"
opencv-python = "^4.5.5"
tqdm = "^4.62.3"
Shapely = "^1.8.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
ipykernel = {version = "^6.6.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
